[package]
name = "sol-abi-jumps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-solc = { version = "2.0.6", features = ["async", "svm-solc"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = {version = "4.3.19", features = ["derive"]}
tokio = { version = "1", features = ["macros"] }
ethers = {version = "2.0.8"}
regex = "1.1.8"
regex-split = "0.1.0"
hex = "0.4.3"
blockscout-display-bytes = "1.0.0"
tracing = "0.1.37"
tracing-subscriber = {version= "0.3.17", features = ["env-filter"]}
# ethabi = "18.0.0"
# heimdall = {git = "https://github.com/Jon-Becker/heimdall-rs"}
# heimdall-common = {git = "https://github.com/Jon-Becker/heimdall-rs"}
# clap-verbosity-flag = "1.0.1"
# evm_rs = "0.3.2"


[dev-dependencies]
sha3 = "0.10"
pretty_assertions = "1.2"